@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.762 2009/02/05 13:52:43 joerg Exp $
+# $NetBSD: Makefile,v 1.763 2009/02/09 23:15:24 joerg Exp $
 #
 
 COMMENT=	Networking tools
@@ -426,7 +426,6 @@ SUBDIR+=	py-kenosis
 SUBDIR+=	py-libdnet
 SUBDIR+=	py-libpcap
 SUBDIR+=	py-medusa
-SUBDIR+=	py-mimelib
 SUBDIR+=	py-soaplib
 SUBDIR+=	py-soappy
 SUBDIR+=	py-spreadmodule
