@@ -1,20 +1,0 @@
-# $NetBSD: Makefile,v 1.19 2009/02/09 21:09:22 joerg Exp $
-#
-
-DISTNAME=	email-2.5
-PKGNAME=	${PYPKGPREFIX}-mimelib-2.5
-PKGREVISION=	2
-CATEGORIES=	net python
-MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=/mimelib/}
-
-MAINTAINER=	pkgsrc-users@NetBSD.org
-HOMEPAGE=	http://mimelib.sourceforge.net/
-COMMENT=	Email package for Python
-
-PKG_DESTDIR_SUPPORT=	user-destdir
-
-PYDISTUTILSPKG=	yes
-
-.include "../../lang/python/extension.mk"
-
-.include "../../mk/bsd.pkg.mk"
