@@ -1,68 +1,0 @@
-@comment $NetBSD: PLIST,v 1.4 2008/04/12 22:43:08 jlam Exp $
-${PYSITELIB}/email/Charset.py
-${PYSITELIB}/email/Charset.pyc
-${PYSITELIB}/email/Charset.pyo
-${PYSITELIB}/email/Encoders.py
-${PYSITELIB}/email/Encoders.pyc
-${PYSITELIB}/email/Encoders.pyo
-${PYSITELIB}/email/Errors.py
-${PYSITELIB}/email/Errors.pyc
-${PYSITELIB}/email/Errors.pyo
-${PYSITELIB}/email/Generator.py
-${PYSITELIB}/email/Generator.pyc
-${PYSITELIB}/email/Generator.pyo
-${PYSITELIB}/email/Header.py
-${PYSITELIB}/email/Header.pyc
-${PYSITELIB}/email/Header.pyo
-${PYSITELIB}/email/Iterators.py
-${PYSITELIB}/email/Iterators.pyc
-${PYSITELIB}/email/Iterators.pyo
-${PYSITELIB}/email/MIMEAudio.py
-${PYSITELIB}/email/MIMEAudio.pyc
-${PYSITELIB}/email/MIMEAudio.pyo
-${PYSITELIB}/email/MIMEBase.py
-${PYSITELIB}/email/MIMEBase.pyc
-${PYSITELIB}/email/MIMEBase.pyo
-${PYSITELIB}/email/MIMEImage.py
-${PYSITELIB}/email/MIMEImage.pyc
-${PYSITELIB}/email/MIMEImage.pyo
-${PYSITELIB}/email/MIMEMessage.py
-${PYSITELIB}/email/MIMEMessage.pyc
-${PYSITELIB}/email/MIMEMessage.pyo
-${PYSITELIB}/email/MIMEMultipart.py
-${PYSITELIB}/email/MIMEMultipart.pyc
-${PYSITELIB}/email/MIMEMultipart.pyo
-${PYSITELIB}/email/MIMENonMultipart.py
-${PYSITELIB}/email/MIMENonMultipart.pyc
-${PYSITELIB}/email/MIMENonMultipart.pyo
-${PYSITELIB}/email/MIMEText.py
-${PYSITELIB}/email/MIMEText.pyc
-${PYSITELIB}/email/MIMEText.pyo
-${PYSITELIB}/email/Message.py
-${PYSITELIB}/email/Message.pyc
-${PYSITELIB}/email/Message.pyo
-${PYSITELIB}/email/Parser.py
-${PYSITELIB}/email/Parser.pyc
-${PYSITELIB}/email/Parser.pyo
-${PYSITELIB}/email/Utils.py
-${PYSITELIB}/email/Utils.pyc
-${PYSITELIB}/email/Utils.pyo
-${PYSITELIB}/email/__init__.py
-${PYSITELIB}/email/__init__.pyc
-${PYSITELIB}/email/__init__.pyo
-${PYSITELIB}/email/_compat21.py
-${PYSITELIB}/email/_compat21.pyc
-${PYSITELIB}/email/_compat21.pyo
-${PYSITELIB}/email/_compat22.py
-${PLIST.compat22}${PYSITELIB}/email/_compat22.pyc
-${PLIST.compat22}${PYSITELIB}/email/_compat22.pyo
-${PYSITELIB}/email/_parseaddr.py
-${PYSITELIB}/email/_parseaddr.pyc
-${PYSITELIB}/email/_parseaddr.pyo
-${PYSITELIB}/email/base64MIME.py
-${PYSITELIB}/email/base64MIME.pyc
-${PYSITELIB}/email/base64MIME.pyo
-${PYSITELIB}/email/quopriMIME.py
-${PYSITELIB}/email/quopriMIME.pyc
-${PYSITELIB}/email/quopriMIME.pyo
-@dirrm ${PYSITELIB}/email
